log-output/manifests/traefik-strip-mid.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: logoutput-strip
  namespace: exercises
spec:
  stripPrefix:
    prefixes:
      - /logoutput
