log-output/manifests/log-output-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes: # Define volume
        - name: shared-logs
          persistentVolumeClaim:
            claimName: shared-logs-claim # Reference the PVC
      containers:
        - name: log-output-writer
          image: sunqen/log-output-writer:latest
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/logs
        - name: log-output-reader
          image: sunqen/log-output-reader:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/logs
