log-output/manifests/pingpong-app-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: pingpong-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-app
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      containers:
        - name: pingpong-app
          image: sunqen/pingpong-app
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
