log-output/manifests/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logdb
spec:
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: logdb
